--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NSChat</title>
+    <title>nort</title>
     <style>
         body {
             font-family: system-ui, -apple-system, sans-serif;
@@ -217,7 +217,7 @@
 
     <div id="chat-container" style="display: none;">
         <div id="chat-header">
-            <h2>NSChat</h2>
+            <h2>nort</h2>
             <button id="logout-btn">Logout</button>
         </div>
         <div id="messages"></div>
