--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,51 @@
             border-radius: 8px;
             max-width: 70%;
             word-break: break-word;
+            position: relative;
+            margin: 2px 15px 2px 2px;
+        }
+
+        .message .delete-btn {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            background: white;
+            border: 1px solid #ccc;
+            color: #ff3b30;
+            padding: 0;
+            font-size: 14px;
+            cursor: pointer;
+            opacity: 0;
+            transition: all 0.2s;
+            z-index: 1;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
+
+        .message:hover .delete-btn {
+            opacity: 0.7;
+        }
+
+        .message .delete-btn:hover {
+            opacity: 1;
+            background: #fff;
+            transform: scale(1.1);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        }
+
+        .message.user .delete-btn {
+            color: #ff3b30;
+            background: white;
+            border: 1px solid #ccc;
+        }
+
+        .message.user .delete-btn:hover {
+            background: white;
         }
 
         .message.user {
